--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     Hier komt de knoppenbalk
     </nav>
     <section>
-    Hier komt de inhoud van de pagina
-    </section>
+    <article>
+      het komst eerste artikel
+      <article> 
+      hier komt de tweede
+      <article>
+      hier komt derde
+      <article>
+      </section>
     <footer>
     Hier komt een copyright en info over de maker
     </footer>
