--- a/index.html
+++ b/index.html
@@ -1,28 +1,74 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML5>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"> 
+    <link rel="stylesheet" href="style/opmaak.css">
     <title>Mijn nieuwe website</title>
   </head>
 
   <body>
     <header>
-    Hier komt een plaatje met Logo
-    </header>
+   background: url('../images/headermetlogo.png');
+  width: 960px;
+  height: 150px;
+      <h1>De toekomst van robotica</h1>
+    header h1 {
+  font-size: 300%;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: black;
+  text-align: right;
+  text-shadow: 5px 5px 7px #000000;
+}</header>
     <nav>
     Hier komt de knoppenbalk
     </nav>
     <section>
     <article>
-      het komst eerste artikel
-      <article> 
-      hier komt de tweede
-      <article>
-      hier komt derde
-      <article>
-      </section>
+    <h1></h1>Crypto stijgt aan een raket er zijn meer gelukkige wacht niet te lang.
+     <article> 
+    <h2></h2>Nieuwe coin op de markt Zogeheten XRP oil coin !
+   <article>
+   <h3></h3>AFRICA staat op vecht terug tegen frankrijk strijdt voor onafhankelijkheid!
+   <article>
+   </section>
     <footer>
     Hier komt een copyright en info over de maker
     </footer>
   </body>
+        body {
+  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+  background: grey url('../images/blokje.jpg') repeat;
+}
 </html>
+* {
+  margin: 0px;
+  padding: 0px;
+}
+  <nav>
+    <ul>
+    <li><a href="home.html">Home</a></li>
+     <li><a href="#">Industrie</a></li>
+     <li><a href="#">Ruimtevaart</a></li>
+     <li><a href="#">Geneeskunde</a></li>
+      </ul>
+    </nav>
+    ul {
+  background: #080808;
+  padding: 10px;
+}
+
+ul li {
+  background: #787878;
+  padding: 5px;
+  border: solid 2px white;
+  display: inline-block;
+}
+
+ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  color: #C0C0C0;
+}
