--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     Hier komt de knoppenbalk
     </nav>
     <section>
+      section {
+  padding: 5px;
+  margin: 5px;
+  border: double 4px black;
+}
+
+section article {
+  border: 3px solid black;
+  border-radius: 0px 20px 20px 20px;
+  margin: 5px 10px 5px 10px;
+  padding: 10px;
+  background: white;
+}
+
     <article>
     <h1></h1>Crypto stijgt aan een raket er zijn meer gelukkige wacht niet te lang.
      <article> 
@@ -31,9 +45,17 @@
    <h3></h3>AFRICA staat op vecht terug tegen frankrijk strijdt voor onafhankelijkheid!
    <article>
    </section>
-    <footer>
-    Hier komt een copyright en info over de maker
-    </footer>
+    
+
+   footer {
+  background: #F0F0F0;
+}
+
+footer h3 {
+  text-align: center;
+  font-weight: normal;
+  font-size: 90%;
+}
   </body>
         body {
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
