--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+		<div class="wrapper">
     <header>
    background: url('../images/headermetlogo.png');
   width: 960px;
@@ -47,7 +48,11 @@ section article {
    </section>
     
 
-   footer {
+   
+ <footer>
+  <h3>Made with &hearts; by Coderclass</h3>
+</footer>
+footer {
   background: #F0F0F0;
 }
 
@@ -61,6 +66,8 @@ footer h3 {
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   background: grey url('../images/blokje.jpg') repeat;
 }
+		 <div></div>
+		 <body></body>
 </html>
 * {
   margin: 0px;
