--- a/index.html
+++ b/index.html
@@ -1,103 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"> 
-    <link rel="stylesheet" href="style/opmaak.css">
-    <title>Mijn nieuwe website</title>
+    <title>Africa XRP oil coin/title>
   </head>
-
   <body>
-		<div class="wrapper">
-    <header>
-   background: url('../images/headermetlogo.png');
-  width: 960px;
-  height: 150px;
-      <h1>De toekomst van robotica</h1>
-    header h1 {
-  font-size: 300%;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: black;
-  text-align: right;
-  text-shadow: 5px 5px 7px #000000;
-}</header>
-    <nav>
-    Hier komt de knoppenbalk
-    </nav>
-    <section>
-      section {
-  padding: 5px;
-  margin: 5px;
-  border: double 4px black;
-}
-
-section article {
-  border: 3px solid black;
-  border-radius: 0px 20px 20px 20px;
-  margin: 5px 10px 5px 10px;
-  padding: 10px;
-  background: white;
-}
-
-    <article>
-    <h1></h1>Crypto stijgt aan een raket er zijn meer gelukkige wacht niet te lang.
-     <article> 
-    <h2></h2>Nieuwe coin op de markt Zogeheten XRP oil coin !
-   <article>
-   <h3></h3>AFRICA staat op vecht terug tegen frankrijk strijdt voor onafhankelijkheid!
-   <article>
-   </section>
-    
-
-   
- <footer>
-  <h3>Made with &hearts; by Coderclass</h3>
-</footer>
-footer {
-  background: #F0F0F0;
-}
-
-footer h3 {
-  text-align: center;
-  font-weight: normal;
-  font-size: 90%;
-}
+  <h1>Africa staat op</h1>
+Mali wilt niet meer onafhankelijk te zijn van frankrijk
+<h1>Oil coin XRP </h1>
+De nieuwe oil coin stijgt elke dag met het dubbelewaarde
+<h1>Langgoed</h1>
+Africa zegt nee tegen frankrijk!En vecht terug en zal voor onhankelijkheid gaan,Meer als 400 jaar geleden kwamen de fransen mali binnen
+Bij het ondeking van het land kwamen de fransen goudmijnen tegen het lijf.Dat was het keer punt voor mali en begin voor frankrijk	  
   </body>
-        body {
-  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-  background: grey url('../images/blokje.jpg') repeat;
-}
-		 <div></div>
-		 <body></body>
 </html>
-* {
-  margin: 0px;
-  padding: 0px;
-}
-  <nav>
-    <ul>
-    <li><a href="home.html">Home</a></li>
-     <li><a href="#">Industrie</a></li>
-     <li><a href="#">Ruimtevaart</a></li>
-     <li><a href="#">Geneeskunde</a></li>
-      </ul>
-    </nav>
-    ul {
-  background: #080808;
-  padding: 10px;
-}
-
-ul li {
-  background: #787878;
-  padding: 5px;
-  border: solid 2px white;
-  display: inline-block;
-}
-
-ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-ul li a:hover {
-  color: #C0C0C0;
-}
