--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>hey oil coin xrp</title>
-  </head>
-  <body>
-  <h1>coin schiet in de lucht</h1>
-  </body>
+<html lang="en-">
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="author" content="dave gray">
+        <meta name="description" content="BBL hier leer je alles over BBL ">
+
+<title>my eerste web blog</title>
+<link rel="icon" href="html5.png" type="image/x-icon">
+<link rel="stylesheet href=main.css" type="text/css">
+ </head>
+    <body>
+        <h1>BBL4 Beuty&shy </h1>
+        <p>Hier zal ik jullie alles infomatie geven over wat precies nou een BBL is </p>
+        <img src="download (2).jpg" alt="" title="Ik leer jullie over bbl" width="208" height="300">
+        <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
+        <figure>
+        <img src="download (3).jpg" alt="" width="180" height="275" loading="lazy">
+         </figure>
+
+        <hr>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><brbr><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </body>
+
+
+
 </html>
