--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="download (2).jpg" alt="" title="Ik leer jullie over bbl" width="208" height="300">
         <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
         <figure>
-        <img src="download (3).jpg" alt="" width="180" height="275" loading="lazy">
+        <img src="downloand (3) .jpg" alt="" width="180" height="275" loading="lazy">
          </figure>
 
         <hr>
