--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <p>Hier zal ik jullie alles infomatie geven over wat precies nou een BBL is </p>
         <img src="download (2).jpg" alt="" title="Ik leer jullie over bbl" width="208" height="300">
         <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
+        <a href="https://www.tiktok.com/discover/skiny-bbl-results-black-women">Resultaten van een mooie bbl!</a>
         <figure>
-        <img src="downloand (3) .jpg" alt="" width="180" height="275" loading="lazy">
+        <img src="download (3).jpg" alt="" width="180" height="275" loading="lazy">
          </figure>
 
         <hr>
