--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
         <a href="https://www.tiktok.com/discover/skiny-bbl-results-black-women">Resultaten van een mooie bbl!</a>
         <figure>
-        <img src="download (3).jpg" alt="" width="180" height="275" loading="lazy">
+        <img src="download (3).jpg" alt="" width="180" height="275">
          </figure>
 
         <hr>
