--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet href=main.css" type="text/css">
  </head>
     <body>
-        <h1>BBL4 Beuty&shy </h1>
+        <h1>BBL4 Beuty & shy! </h1>
         <p>Hier zal ik jullie alles infomatie geven over wat precies nou een BBL is </p>
         <img src="download (2).jpg" alt="" title="Ik leer jullie over bbl" width="208" height="300">
         <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
