--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="dave gray">
         <meta name="description" content="BBL hier leer je alles over BBL ">
 
-<title>my eerste web blog</title>
+<title>BBl beauty& shy! </title>
 <link rel="icon" href="html5.png" type="image/x-icon">
 <link rel="stylesheet href=main.css" type="text/css">
  </head>
