--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="dave gray">
         <meta name="description" content="BBL hier leer je alles over BBL ">
 
-<title>my eerste web blog</title>
+<title>BBL 4 beauty & shy  </title>
 <link rel="icon" href="html5.png" type="image/x-icon">
 <link rel="stylesheet href=main.css" type="text/css">
  </head>
@@ -15,14 +15,14 @@
         <p>Hier zal ik jullie alles infomatie geven over wat precies nou een BBL is </p>
         <img src="download (2).jpg" alt="" title="Ik leer jullie over bbl" width="208" height="300">
         <h2>BBL komt steeds vaker voor bij  vrouwen, </h2>
-        <a href="https://www.tiktok.com/discover/skiny-bbl-results-black-women">Resultaten van een mooie bbl!</a>
+        <a href="https://www.tiktok.com/discover/skiny-bbl-results-black-women">Hier een paar dames die blij zijn met hun BBL!</a>
         <figure>
         <img src="download (3).jpg" alt="" width="180" height="275" loading="lazy">
          </figure>
 
         <hr>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><brbr><br><br><br><br><br><br><br><br><br><br><br><br><br>
-           <h3> Hier een paar dames die blij zijn met hun BBL!</h3>
+           <h3> Resultaten van een paar mooie bbl</h3>
             <ifame width="1280"height="720"
             src=https://rr3---sn-ab5l6ndy.googlevideo.com/videoplayback?expire=1692225379&ei=A_vcZKXHMY2M8wSilK6gCg&ip=91.229.105.170&id=o-AJcIJ_TsVk3ZNRJ9KW9pLb4IkrFXfMiW5KgJxv_MsZA_&itag=18&source=youtube&requiressl=yes&vprv=1&svpuc=1&mime=video%2Fmp4&ns=TfsZXEwZGqfxBq6C1kl7hrUP&gir=yes&clen=36742687&ratebypass=yes&dur=617.047&lmt=1690279429569323&fexp=24007246,51000024&c=TVHTML5_SIMPLY_EMBEDDED_PLAYER&txp=5438434&n=6UMtWwTn4wXCrQ&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Csvpuc%2Cmime%2Cns%2Cgir%2Cclen%2Cratebypass%2Cdur%2Clmt&sig=AOq0QJ8wRAIgaydQkrFV7anlTJxwl1hxJxtKdQiVAx3Xth5mbGKyRGQCIFgXx6Kf7dWa_Q7gaS2brlNzUNhqiPajbVASqgbaNDLX&title=TWERK+COMPILATION+&redirect_counter=1&rm=sn-gjo-w43s7e&req_id=f55f8ebd8943a3ee&cms_redirect=yes&cmsv=e&ipbypass=yes&mh=2M&mm=29&mn=sn-ab5l6ndy&ms=rdu&mt=1692203599&mv=m&mvi=3&pl=23&lsparams=ipbypass,mh,mm,mn,ms,mv,mvi,pl&lsig=AG3C_xAwRQIhAKN9-O3KAH5em0nybt_PaAQ6UQicP6-fPZsjqyEc1O2dAiAloJhaV-g9oMqIiWFj3Qyuzj9Vg9m2kUOADlmFqXdS4A%3D%3D#87>
 
@@ -32,7 +32,7 @@
         </body>
 
 
-
+Resultaten van een mooie bbl
 
 
 </html>
