--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="BBL">
         <meta name="description" content="BBL hier leer je alles over BBL ">
 
-<title></title>
+<title>BBL 4 beauty & shy</title>
 <link rel="icon" href="html5.png" type="image/x-icon">
 <link rel="stylesheet href=main.css" type="text/css">
  </head>
