--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
              </iframe>
             <style>
+                
   .subscribe-button{
     background-color: rgb(201, 17, 17);
     color:white;
@@ -49,7 +50,23 @@
   width: 62px;
   border-radius: 2px;
   cursor: pointer;
+
+    }
+
+.tweet-button {
+background-color: rgba(0, 0, 255, 0.856);
+color:white;
+border: none;
+height: 36px;
+width: 74px;  
+border-radius: 18px;
+font-weight: bold;
+font-size: 15px;
+cursor: pointer;
+margin-left: 8px;
+
 }
+                
 </style>
 
 <button class="subscribe-button">SUBSCRIBE
