--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
              </iframe>
         <hr>
-     <style>
+     <style
+         
   .subscribe-button{
     background-color: rgb(201, 17, 17);
     color:white;
@@ -87,15 +88,9 @@ cursor: pointer;
 margin-left: 8px;
 box-shadow: 5px 5px 10px rgba(0,0, 0, 0.15)
 }
-
-</style>
-
-<button class="subscribe-button">SUBSCRIBE
-</button>
+<button class="subscribe-button">SUBSCRIBE</button>
 <button class="join-button">JOIN</button>
-
-  <button class="Tweet-button">
-    TWEET
-  </button>
+<button class="Tweet-button">TWEET</button>
+</style>
         </body>
 </html>
